--- a/app/src/main/res/layout/activity_clicky_clicky.xml
+++ b/app/src/main/res/layout/activity_clicky_clicky.xml
@@ -22,7 +22,9 @@
         android:id="@+id/aButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:layout_marginStart="75dp"
+        android:layout_marginEnd="20dp"
         android:onClick="onClick"
         android:text="@string/clicky_a"
         app:layout_constraintTop_toTopOf="parent"
@@ -35,6 +37,9 @@
         android:id="@+id/bButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:onClick="onClick"
         android:text="@string/clicky_b"
         app:layout_constraintTop_toTopOf="parent"
@@ -47,6 +52,8 @@
         android:id="@+id/cButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginStart="20dp"
         android:layout_marginEnd="75dp"
         android:onClick="onClick"
         android:text="@string/clicky_c"
@@ -60,7 +67,9 @@
         android:id="@+id/dButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:layout_marginStart="75dp"
+        android:layout_marginEnd="20dp"
         android:onClick="onClick"
         android:text="@string/clicky_d"
         app:layout_constraintTop_toBottomOf="@+id/aButton"
@@ -73,6 +82,9 @@
         android:id="@+id/eButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:onClick="onClick"
         android:text="@string/clicky_e"
         app:layout_constraintTop_toBottomOf="@+id/bButton"
@@ -85,6 +97,8 @@
         android:id="@+id/fButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
         android:layout_marginEnd="75dp"
         android:onClick="onClick"
         android:text="@string/clicky_f"
