Create a new activity to allow user inputs for URLs and names.

--- a/app/src/main/res/layout/activity_link_user_input.xml
+++ b/app/src/main/res/layout/activity_link_user_input.xml
@@ -25,13 +25,13 @@
         android:hint="@string/url_hint"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/submitButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.500"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/submitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/submit"
