--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:layout_marginEnd="75dp"
         android:onClick="onClick"
         android:text="@string/about_me"
-        app:layout_constraintTop_toBottomOf="@+id/clickyClickyButton"
+        app:layout_constraintTop_toBottomOf="@+id/linkCollectorButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +41,7 @@
         android:onClick="onClick"
         android:text="@string/clicky_clicky"
         app:layout_constraintTop_toBottomOf="@+id/hello"
-        app:layout_constraintBottom_toTopOf="@+id/aboutMeButton"
+        app:layout_constraintBottom_toTopOf="@+id/linkCollectorButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -63,8 +63,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:src="@drawable/ic_baseline_done_24"
+        android:contentDescription="@string/input"
         android:layout_margin="16dp"
-        app:backgroundTint="@color/design_default_color_primary" />
+        android:src="@drawable/ic_baseline_done_24"
+        app:backgroundTint="@color/design_default_color_primary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
