--- a/app/src/main/res/layout/activity_link_collector.xml
+++ b/app/src/main/res/layout/activity_link_collector.xml
@@ -4,10 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LinkCollectorActivity">
+    tools:context=".AboutMeActivity">
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="14dp"
+        android:contentDescription="@string/input"
+        android:clickable="true"
+        android:focusable="true"
+        android:src="@drawable/ic_baseline_done_24"
+        android:tint="@android:color/white"
+        android:backgroundTint="@color/design_default_color_primary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/linkRecyclerView"
+        android:id="@+id/recyclerView"
+        android:paddingTop="?attr/actionBarSize"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
