--- a/app/src/main/res/layout/activity_prime_finder.xml
+++ b/app/src/main/res/layout/activity_prime_finder.xml
@@ -14,7 +14,45 @@
         android:layout_marginEnd="75dp"
         android:text="@string/prime_text"
         android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/terminateSearchButton"
+        app:layout_constraintBottom_toTopOf="@+id/pacifierSwitch"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/findPrimeButton"
+        android:layout_width="190dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="75dp"
+        android:layout_marginEnd="75dp"
+        android:text="@string/find_primes"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/terminateSearchButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="DuplicateSpeakableTextCheck" />
+
+    <Button
+        android:id="@+id/terminateSearchButton"
+        android:layout_width="190dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="75dp"
+        android:layout_marginEnd="75dp"
+        android:text="@string/terminate_search"
+        app:layout_constraintTop_toBottomOf="@+id/findPrimeButton"
+        app:layout_constraintBottom_toTopOf="@+id/primeFinderTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="DuplicateSpeakableTextCheck" />
+
+    <CheckBox
+        android:id="@+id/pacifierSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="75dp"
+        android:layout_marginEnd="75dp"
+        android:text="@string/pacifier_switch"
+        app:layout_constraintTop_toBottomOf="@+id/primeFinderTextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
